--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
@@ -30,7 +30,7 @@
           class="header__logo-image"
           src="./images/logo-black.svg"
           alt="Логотип проекта черный"
-        >
+        />
       </a>
       <address class="header__address address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -125,7 +125,7 @@
             class="about__logo-image"
             src="./images/logo-white.svg"
             alt="логотип белый"
-        >
+          />
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
@@ -173,7 +173,7 @@
               class="footer__social-icon"
               src="./images/yt.svg"
               alt="иконка ютуб"
-            >
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -182,7 +182,7 @@
               class="footer__social-icon"
               src="./images/vk.svg"
               alt="иконка вк"
-            >
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
@@ -191,7 +191,7 @@
               class="footer__social-icon"
               src="./images/pinterest.svg"
               alt="иконка пинтерест"
-            >
+            />
           </a>
         </li>
       </ul>
