--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
               class="footer__social-icon"
               src="./images/yt.svg"
@@ -177,7 +177,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
               class="footer__social-icon"
               src="./images/vk.svg"
@@ -186,7 +186,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
+          <a class="footer__social-link" href="#" target="_blank">
             <img
               class="footer__social-icon"
               src="./images/pinterest.svg"
